--- a/package.json
+++ b/package.json
@@ -8,21 +8,21 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "expo": "~37.0.3",
-    "expo-asset": "~8.1.3",
-    "expo-constants": "~9.0.0",
-    "expo-file-system": "~8.1.0",
-    "expo-image-manipulator": "~8.1.0",
-    "expo-image-picker": "~8.1.0",
-    "expo-permissions": "~8.1.0",
-    "expo-print": "~8.1.0",
-    "react": "~16.9.0",
-    "react-dom": "~16.9.0",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz"
+    "expo": "^42.0.0",
+    "expo-asset": "~8.3.3",
+    "expo-constants": "~11.0.1",
+    "expo-file-system": "~11.1.3",
+    "expo-image-manipulator": "~9.2.2",
+    "expo-image-picker": "~10.2.2",
+    "expo-permissions": "~12.1.1",
+    "expo-print": "~10.2.1",
+    "react": "16.13.1",
+    "react-dom": "16.13.1",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz"
   },
   "devDependencies": {
-    "@babel/core": "^7.8.6",
-    "babel-preset-expo": "~8.1.0"
+    "@babel/core": "~7.9.0",
+    "babel-preset-expo": "8.3.0"
   },
   "private": true
 }
