--- a/package.json
+++ b/package.json
@@ -14,11 +14,11 @@
     "expo-file-system": "~11.1.3",
     "expo-image-manipulator": "~9.2.2",
     "expo-image-picker": "~10.2.2",
-    "expo-permissions": "~12.1.1",
     "expo-print": "~10.2.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz"
+    "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
+    "expo-media-library": "~12.1.2"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
